projects/vb6parse/snapshots/parsers/cst/control_flow/loop/while_with_array_access.snap
---
source: projects/vb6parse/tests/control_flow/loop_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WhileStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WhileKeyword
                  text: While
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: arr
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: index
                        - kind: RightParenthesis
                          text: )
                    - kind: Whitespace
                      text: " "
                    - kind: InequalityOperator
                      text: "<>"
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "0"
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: AssignmentStatement
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: index
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: index
                            - kind: Whitespace
                              text: " "
                            - kind: AdditionOperator
                              text: +
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "1"
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: WendKeyword
                  text: Wend
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
